# cursor-clicker

./: .gitignore  LICENSE  README.md  build_exe.py  pyproject.toml  requirements.txt  setup.py
.cursor/: CODE_ADVICE.mdc  LESSONS_LEARNED.mdc
examples/: direct_vision_test.py  extract_text.py  qwen_vision_run.py  qwen_vision_test.py  show_image_info.py  test_prompt.py
scripts/: create-github-repo.ps1
src/cursor_clicker/: __init__.py  __main__.py  cli.py  continuous_monitor.py  main.py  models.py  screenshot_manager.py  utils.py
tests/: __init__.py  test_anthropic_error.py  test_main.py  test_qwen_vision.py  test_screenshot_manager.py
